--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Franco Calegari">
     
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="Portal de Redireccionamiento">
+    <meta property="og:title" content="LawPortal">
     <meta property="og:description" content="Accede fácilmente a normativas legales y otros sitios importantes a través de nuestro portal de redireccionamiento.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.tu-dominio.com/">
@@ -30,7 +30,7 @@
     <meta name="twitter:site" content="@tu_twitter">
     
     <!-- Favicon -->
-    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/img/Logo.ico" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
