--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LawPortal - Argentina</title>
-    <link rel="icon" href="./assets/img/logo.png" type="image/png">
+    <link rel="icon" href="./assets/img/Logo.ico" type="ico">
     
     <!-- Meta Descripción -->
     <meta name="description" content="Portal de redireccionamiento que ofrece enlaces directos a normativas legales y otros sitios importantes. Filtra fácilmente y accede rápidamente a la información que necesitas.">
