--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <meta property="og:title" content="LawPortal">
     <meta property="og:description" content="Accede fácilmente a normativas legales y otros sitios importantes a través de nuestro portal de redireccionamiento.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.tu-dominio.com/">
-    <meta property="og:image" content="https://www.tu-dominio.com/assets/img/og-image.jpg">
+    <meta property="og:url" content="https://francocalegari.github.io/web-abogacia/index.html">
+    <meta property="og:image" content="https://francocalegari.github.io/web-abogacia/assets/img/LawPortalv1.jpg">
     
     <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Portal de Redireccionamiento">
     <meta name="twitter:description" content="Accede fácilmente a normativas legales y otros sitios importantes a través de nuestro portal de redireccionamiento.">
-    <meta name="twitter:image" content="https://www.tu-dominio.com/assets/img/twitter-image.jpg">
-    <meta name="twitter:site" content="@tu_twitter">
+    <meta name="twitter:image" content="https://francocalegari.github.io/web-abogacia/assets/img/LawPortalv1.jpg">
+    <meta name="twitter:site" content="@FrancoCalegari19">
     
     <!-- Favicon -->
     <link rel="icon" href="./assets/img/Logo.ico" type="image/x-icon">
