--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
             });
         }
       </script>
+
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PVVN74LFGE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PVVN74LFGE');
+</script>
       
 
 </body>
