--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section id="about">
             <h2>Sobre LawPortal</h2>
             <p>LawPortal es una web diseñada para ayudarte a encontrar el material más rápido que cualquier otra plataforma, permitiéndote descargar archivos PDF o revisar los comentarios de abogados sobre las leyes. Próximamente, agregaremos más herramientas para mejorar tu experiencia.</p>
-            <p>Si tienes sugerencias de cambios o cosas para agregar, no dudes en enviarnos un mensaje al siguiente correo: <a href="mailto:olympianshop1@gmail.com">olympianshop1@gmail.com</a>.</p>
+            <p>Si tienes sugerencias de cambios o cosas para agregar, no dudes en enviarnos un mensaje al siguiente correo: <a href="mailto:francocalegari55@gmail.com">francocalegari55@gmail.com</a>.</p>
             <a href='https://cafecito.app/francocalegaridev' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_6.png 1x, https://cdn.cafecito.app/imgs/buttons/button_6_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_6_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_6.png' alt='Invitame un café en cafecito.app' /></a>
         </section>
     
