--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="manifest" href="./manifest.json">
-    <meta name="theme-color" content="#29abe0">
+    <meta name="theme-color" content="#7ff8fe">
     <script src="https://kit.fontawesome.com/274f77f0e3.js" crossorigin="anonymous"></script>
 
     <script id="chatBroEmbedCode">
